--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
+<h1>Coming soon...</h1>
+
 <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
