--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <style>
       * { padding: 0; margin: 0; }
       canvas { background: #eee; display: block; margin: 0 auto; }
+      h1 {text-align: center;}
     </style>
 </head>
 <body>
 
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
-<h1>Coming soon...</h1>
+<h1 >Coming soon...</h1>
 
 <script>
     var canvas = document.getElementById("myCanvas");
