--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
-    document.addEventListener("mousemove", mouseMoveHandler, false);
+    // document.addEventListener("mousemove", mouseMoveHandler, false);
 
     leftButton.addEventListener("mousedown", function() {
         leftPressed = true;
